Fix overflow issue

--- a/src/assets/styles/partials/pages/_index.scss
+++ b/src/assets/styles/partials/pages/_index.scss
@@ -34,6 +34,8 @@ header {
 .title,
 .subtitle {
   text-align: center;
+  overflow-wrap: anywhere;
+  word-break: break-word;
 }
 
 .form {
